# NES-Emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  premake5.lua
.github/workflows/: main-workflow.yml
NES/: premake5.lua  test
NES/src/: 6502.c  6502.h  bus.h  event_filter_function.h  main.c  stb_imp.c  string_util.c  string_util.h  timer.c  timer.h
NES/src/Backend/: 2C02.c  2C02.h  2C02_Bus.c  2C02_Bus.h  6502.c  6502.h  6502_Bus.c  6502_Bus.h  Cartridge.c  Cartridge.h  Gamepad.c  bus.c  nes.c  nes.h
NES/src/Backend/Mappers/: Mapper_000.c  Mapper_000.h  Mapper_001.c  Mapper_001.h  Mapper_JUN.c  Mapper_JUN.h
NES/src/Frontend/: Controller.h  Gui.c  Gui.h  Renderer.c  Renderer.h
NES/tests/: Benchmarks.c  Benchmarks.h  stack_test.bin.bak  test.c  test.h  test_2C02.c  test_2C02.h  test_6502.c  test_6502.h  test_util.c  test_util.h
SDL2-2.0.12/VisualC/SDL/Win32/Debug/: version.res
SDL2-2.0.12/VisualC/SDL/Win32/Debug/SDL2.tlog/: CL.write.1.tlog  SDL2.lastbuildstate  SDL2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  rc.command.1.tlog  rc.write.1.tlog
SDL2-2.0.12/VisualC/SDL/x64/Release/SDL2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDL2.lastbuildstate  SDL2.write.1u.tlog  link.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
SDL2-2.0.12/VisualC/Win32/Debug/: SDL2.ilk  SDL2.lib
SDL2-2.0.12/VisualC/x64/Release/: SDL2.exp  SDL2main.lib
application/: CMakeLists.txt  premake5.lua
application/src/: Application.c  Application.h  Audio.c  ColorDefs.c  ColorDefs.h  GameController.c  GameController.h  StartupOptions.c  StartupOptions.h  main.c
application/src/Models/: NameTableModel.h
application/src/OpenGL/: BatchRenderer.c  BatchRenderer.h  Debug.h  Framebuffer.c  LineRenderer.c  Scanline.c  Scanline.h  Shader.c  Shader.h  TextRenderer.c  TextRenderer.h  Texture.c
application/src/Util/: FileDialog.c  timer.c  timer.h
application/src/Views/: AboutView.c  AboutView.h  ApuWaveView.c  ApuWaveView.h  Common.h  MemoryView.c  MemoryView.h  NesStateView.c  NesStateView.h  NesView.h  SettingsView.c  SettingsView.h
blockoban/: background.chr  blockoban.asm  blockoban.cfg  compile_levels.py  end_screen.nam  level_select.nam  levels.txt  makefile  numbers.chr  opening_screen.nam  palette.pal  sprites.chr
blockoban/res/: effects.ftm  palette.pal  song.ftm  sprites.chr
blockoban/src/: blockoban.asm  blockoban.cfg  drawing.asm  end_screen.asm  famitone2.inc  gamepad.asm  global.inc  irq.asm  level.asm  nes.inc  nmi.asm  reset.asm  sound_data.asm  util.asm  vars.asm
core/: CMakeLists.txt  premake5.lua
core/emscripten/: api.c  exported.json
core/src/: 2A03.c  2A03.h  2C02.c  2C02.h  2C02Bus.c  2C02Bus.h  2C02_Bus.c  6502.c  6502.h  6502Bus.c  6502Bus.h  6502_Bus.c  Cartridge.c  Cartridge.h  Gamepad.c  Gamepad.h  nes.c  nes.h
core/src/Cheatcodes/: cheatcode.c  cheatcode.h
core/src/Mappers/: Mapper000.c  Mapper000.h  Mapper001.c  Mapper001.h  Mapper002.c  Mapper002.h  Mapper003.c  Mapper003.h  Mapper004.c  Mapper004.h  MapperJUN.c  MapperJUN.h  MapperUtils.c  MapperUtils.h  Mapper_000.c  Mapper_000.h  Mapper_001.c  Mapper_002.c  Mapper_002.h  Mapper_003.c  Mapper_004.c  Mapper_004.h  Mapper_JUN.c  Mapper_JUN.h
res/: NES-Emulator.rc
scripts/: GenerateLinuxProjects.sh  GenerateWindowsProjects.bat  InstallSDL2.sh
src/: FileDialog.c  FileDialog.h  main.c  timer.c  timer.h
src/Backend/: 2A03.c  2A03.h  2C02.c  2C02.h  2C02_Bus.c  2C02_Bus.h  6502.c  6502.h  6502_Bus.c  6502_Bus.h  Cartridge.c  Cartridge.h  Gamepad.c  Gamepad.h  nes.c  nes.h
src/Backend/Mappers/: MapperUtils.c  MapperUtils.h  Mapper_000.c  Mapper_000.h  Mapper_001.c  Mapper_001.h  Mapper_002.c  Mapper_002.h  Mapper_003.c  Mapper_003.h  Mapper_004.c  Mapper_004.h  Mapper_JUN.c  Mapper_JUN.h
src/Frontend/: Application.c  Application.h  Audio.c  Audio.h  Controller.c  Controller.h  Gui.c  Gui.h  Renderer.c  Renderer.h  RuntimeSettings.c  RuntimeSettings.h
src/Frontend/Models/: ChannelEnableModel.h  NesScreenModel.h  PaletteDataModel.h  SettingsModel.h
src/Frontend/OpenGL/: BatchRenderer.c  BatchRenderer.h  Debug.c  Framebuffer.h  LineRenderer.c  LineRenderer.h  Scanline.c  Shader.c  TextRenderer.c  Texture.h
src/Frontend/Views/: AboutView.c  ApuWaveView.c  Common.h  MemoryView.c  NesStateView.c  NesView.c  NesView.h  SettingsView.c
tests/: Benchmarks.c  Benchmarks.h  CMakeLists.txt  premake5.lua  test_2C02.c  test_6502.c  test_util.c  test_util.h
tests/src/: Benchmarks.c  Benchmarks.h  Test2C02.c  Test2C02.h  Test6502.c  Test6502.h  TestMain.c  TestUtil.c  TestUtil.h  test_2C02.c  test_6502.c  test_6502.h  test_main.c  test_util.c  test_util.h
web/: Makefile  api.c  blockoban.nes  emu.js  emu.wasm  index.html  nes.js  premake5.lua
web/static/: index.html  message.js  nes.js
(+2 files in other folders)
